fix blog card not centered

--- a/stories/components/Portfolio/Index/BlogSlider/blogslider.module.css
+++ b/stories/components/Portfolio/Index/BlogSlider/blogslider.module.css
@@ -6,6 +6,6 @@
     display: flex;
     justify-content: center;
     --card-height: 250px;
-    width: var(--card-height) !important;
+    /*width: var(--card-height) !important;*/
 }
 
